[workspace]
resolver = "2"
members = [
    "crates/batata-common",
    "crates/batata-api",
    "crates/batata-persistence",
    "crates/batata-auth",
    "crates/batata-consistency",
    "crates/batata-core",
    "crates/batata-config",
    "crates/batata-naming",
    "crates/batata-plugin",
    "crates/batata-plugin-consul",
    "crates/batata-plugin-cloud",
    "crates/batata-console",
    "crates/batata-server-common",
    "crates/batata-client",
    "crates/batata-mesh",
    "crates/batata-maintainer-client",
    "crates/batata-ai",
    "crates/batata-consul-client",
    "crates/batata-migration",
    "crates/batata-server",
]

[workspace.package]
version = "0.1.0"
authors = ["Tianyu Liang <124244236@qq.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/easynet-cn/batata"

[workspace.dependencies]
# Internal crates
batata-common = { path = "crates/batata-common" }
batata-api = { path = "crates/batata-api" }
batata-persistence = { path = "crates/batata-persistence" }
batata-auth = { path = "crates/batata-auth" }
batata-consistency = { path = "crates/batata-consistency" }
batata-core = { path = "crates/batata-core" }
batata-config = { path = "crates/batata-config" }
batata-naming = { path = "crates/batata-naming" }
batata-plugin = { path = "crates/batata-plugin" }
batata-plugin-consul = { path = "crates/batata-plugin-consul" }
batata-plugin-cloud = { path = "crates/batata-plugin-cloud" }
batata-console = { path = "crates/batata-console" }
batata-server-common = { path = "crates/batata-server-common" }
batata-client = { path = "crates/batata-client" }
batata-maintainer-client = { path = "crates/batata-maintainer-client" }
batata-mesh = { path = "crates/batata-mesh" }
batata-ai = { path = "crates/batata-ai" }
batata-consul-client = { path = "crates/batata-consul-client" }
batata-migration = { path = "crates/batata-migration" }
batata-server = { path = "crates/batata-server" }

# Async runtime
tokio = "1.50"
async-trait = "0.1"
futures = "0.3"

# Web frameworks
actix = "0.13"
actix-web = { version = "4", features = ["compress-gzip", "compress-brotli", "compress-zstd"] }
actix-rt = "2"
actix-http = "3"
actix-multipart = "0.7"
actix-service = "2.0"
actix-utils = "3.0"
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"
tower = "0.5"
http = "1.3"

# Database (supports both MySQL and PostgreSQL)
sea-orm = { version = "1.1", features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_urlencoded = "0.7"
serde_with = "3.18"

# Auth
jsonwebtoken = "9"
bcrypt = "0.17"

# Consensus
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
rocksdb = "0.24"

# Caching
moka = { version = "0.12", features = ["future", "sync"] }
dashmap = "6.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-appender = "0.2"
tracing-opentelemetry = "0.29"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Utils
chrono = "0.4"
uuid = { version = "1.22", features = ["v4"] }
regex = "1.11"
base64 = "0.22"
# Note: md5 (simple API via compute()) and md-5 (RustCrypto Digest trait) serve different use cases
md5 = "0.8"
md-5 = "0.10"
bytes = "1.11"
byteorder = "1.5"
zip = "2.2"
if-addrs = "0.14"
htmlescape = "0.3"
pin-project-lite = "0.2"
tokio-stream = "0.1"
sysinfo = "0.33"
parking_lot = "0.12"
hostname = "0.4"
url = "2.5"
fastrand = "2.3"
rand = "0.9"
hex = "0.4"
hmac = "0.12"
toml = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"

# Telemetry
opentelemetry = { version = "0.28", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["tonic", "grpc-tonic", "trace", "metrics"] }
opentelemetry-semantic-conventions = "0.28"

# Kubernetes
kube = { version = "0.98", features = ["runtime", "client", "derive", "rustls-tls"], default-features = false }
k8s-openapi = { version = "0.24", features = ["v1_31"] }

# HTTP protocol
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1.6", features = ["server", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }

# Auth (extended)
ldap3 = { version = "0.11", default-features = false, features = ["tls-rustls"] }

# Metrics (extended)
prometheus = "0.13"

# Configuration
config = "0.15"
clap = { version = "4.6", features = ["derive", "env"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Input validation
validator = { version = "0.18", features = ["derive"] }

# Dev dependencies
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1.4"
tempfile = "3"

# Build dependencies
tonic-prost-build = "0.14.2"

[profile.dev]
incremental = true

# Optimize third-party dependencies even in dev builds for faster runtime
[profile.dev.package."*"]
opt-level = 2

[profile.release]
# Use fewer codegen units for better optimization (1 = slowest build but best optimization)
codegen-units = 1
# Enable full LTO for maximum optimization
lto = "fat"
# Optimization level 3 for maximum performance
opt-level = 3
# Use abort on panic for smaller binary and slightly better performance
panic = "abort"
# Strip debug info from release binary
strip = true
