[package]
name = "batata-ai"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AI capabilities (MCP/A2A) for Batata - models, registries, and services"

[dependencies]
# Internal crates
batata-common = { workspace = true }
batata-api = { workspace = true }
batata-auth = { workspace = true }
batata-core = { workspace = true }
batata-persistence = { workspace = true }
batata-naming = { workspace = true }
batata-server-common = { workspace = true }

# Web framework
actix-web = { workspace = true }
actix-multipart = { workspace = true }

# gRPC
tonic = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
chrono = { workspace = true }
uuid = { workspace = true }

# Caching
dashmap = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["rt", "sync", "macros"] }

# Logging
tracing = { workspace = true }

# HTTP client (for MCP tool import)
reqwest = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }

# ZIP archive support
zip = { workspace = true }
base64 = { workspace = true }

# Hashing
md-5 = { workspace = true }
const-hex = { workspace = true }
