[package]
name = "batata-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "API definitions for Batata (gRPC and HTTP models)"

[dependencies]
batata-common = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# gRPC
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true, features = ["transport", "tls-native-roots"] }
tonic-prost = { workspace = true }
http = { workspace = true }

# Async
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
bytes = { workspace = true }
chrono = { workspace = true }

# Input validation
validator = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
