[package]
name = "batata-auth"
version = "0.1.0"
authors = ["Tianyu Liang <124244236@qq.com>"]
edition = "2024"
description = "Authentication and authorization for Batata"
license = "Apache-2.0"
repository = "https://github.com/easynet-cn/batata"

[dependencies]
batata-common = { path = "../batata-common" }
batata-api = { path = "../batata-api" }
batata-persistence = { path = "../batata-persistence" }

# Auth
jsonwebtoken = "9"
bcrypt = "0.17"
ldap3 = { version = "0.11", default-features = false, features = ["tls-rustls"] }

# OAuth2/OIDC
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
base64 = "0.22"

# Database
sea-orm = { version = "1.1", features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
async-trait = "0.1"
tokio = { version = "1.49", features = ["rt"] }

# Caching
moka = { version = "0.12", features = ["future", "sync"] }

# Time
chrono = "0.4"

# Error handling
anyhow = "1.0"

# Tracing
tracing = "0.1"
