[package]
name = "batata-auth"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Authentication and authorization for Batata"

[dependencies]
batata-common = { workspace = true }
batata-api = { workspace = true }
batata-persistence = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
ldap3 = { workspace = true }

# OAuth2/OIDC
reqwest = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }

# Database
sea-orm = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

# Caching
moka = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }
