[package]
name = "batata-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK client for Batata/Nacos"

[dependencies]
batata-common = { workspace = true }
batata-api = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# HTTP client
reqwest = { workspace = true, features = ["multipart"] }
bytes = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros", "net"] }

# Concurrency
dashmap = { workspace = true }

# Streaming
tokio-stream = { workspace = true }
futures = { workspace = true }

# Utilities
uuid = { workspace = true }
md-5 = { workspace = true }
hex = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# File operations
tempfile = { workspace = true }

# Random
rand = { workspace = true }

# Metrics
prometheus = { workspace = true }
