[package]
name = "batata-common"
version = "0.1.0"
authors = ["Tianyu Liang <124244236@qq.com>"]
edition = "2024"
description = "Common types, traits, and utilities for Batata"
license = "Apache-2.0"
repository = "https://github.com/easynet-cn/batata"

[dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async traits
async-trait = "0.1"

# Validation
regex = "1.11"

# Network
if-addrs = "0.14"

[dev-dependencies]
tokio = { version = "1.49", features = ["rt", "macros"] }
