[package]
name = "batata-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Common types, traits, and utilities for Batata"

[dependencies]
# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Validation
regex = { workspace = true }

# Caching
moka = { workspace = true }

# Network
if-addrs = { workspace = true }

# Encryption
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
