[package]
name = "batata-config-consul"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Consul-compatible KV store — flat key path model with sessions and transactions"

[dependencies]
batata-foundation.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
bytes.workspace = true
tracing.workspace = true
dashmap.workspace = true
chrono.workspace = true
base64.workspace = true
