[package]
name = "batata-config"
version = "0.1.0"
authors = ["Tianyu Liang <124244236@qq.com>"]
edition = "2024"
description = "Configuration management service for Batata"
license = "Apache-2.0"
repository = "https://github.com/easynet-cn/batata"

[dependencies]
batata-common = { path = "../batata-common" }
batata-api = { path = "../batata-api" }
batata-persistence = { path = "../batata-persistence" }
batata-consistency = { path = "../batata-consistency" }

# Database
sea-orm = { version = "1.1", features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = "3.17"

# Async
async-trait = "0.1"
tokio = { version = "1.49", features = ["full"] }

# Import/Export
zip = "2.2"
base64 = "0.22"

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"

# Utils
md5 = "0.8"
chrono = "0.4"
regex = "1.11"
