[package]
name = "batata-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration management service for Batata"

[dependencies]
batata-common = { workspace = true }
batata-api = { workspace = true }
batata-persistence = { workspace = true }
batata-consistency = { workspace = true }

# Database
sea-orm = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_with = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }

# Import/Export
zip = { workspace = true }
base64 = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Utils
md5 = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
