[package]
name = "batata-consistency"
version = "0.1.0"
authors = ["Tianyu Liang <124244236@qq.com>"]
edition = "2024"
description = "Raft and Distro consensus protocols for Batata"
license = "Apache-2.0"
repository = "https://github.com/easynet-cn/batata"

[dependencies]
batata-common = { path = "../batata-common" }
batata-api = { path = "../batata-api" }

# Raft consensus
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
rocksdb = "0.24"
byteorder = "1.5"

# gRPC
tonic = "0.14"
prost = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency
dashmap = "6"

# Async
async-trait = "0.1"
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
