[package]
name = "batata-consistency"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Raft and Distro consensus protocols for Batata"

[dependencies]
batata-common = { workspace = true }
batata-api = { workspace = true }

# Raft consensus
openraft = { workspace = true }
rocksdb = { workspace = true }
byteorder = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Concurrency
dashmap = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
futures = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# Hashing
md5 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
