[package]
name = "batata-console"
version = "0.1.0"
authors = ["Tianyu Liang <124244236@qq.com>"]
edition = "2024"
description = "Management console for Batata"
license = "Apache-2.0"
repository = "https://github.com/easynet-cn/batata"

[dependencies]
batata-common = { path = "../batata-common" }
batata-api = { path = "../batata-api" }
batata-persistence = { path = "../batata-persistence" }
batata-core = { path = "../batata-core" }
batata-config = { path = "../batata-config" }
batata-naming = { path = "../batata-naming" }
batata-client = { path = "../batata-client" }

# Web framework
actix-web = "4"
actix-multipart = "0.7"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Database
sea-orm = { version = "1.1", features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
async-trait = "0.1"
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"

# Time
chrono = "0.4"

# UUID
uuid = { version = "1.19", features = ["v4"] }

# Regex
regex = "1.11"
