[package]
name = "batata-console"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Management console for Batata"

[dependencies]
batata-common = { workspace = true }
batata-api = { workspace = true }
batata-persistence = { workspace = true }
batata-config = { workspace = true }
batata-maintainer-client = { workspace = true }
batata-plugin = { workspace = true }
batata-server-common = { workspace = true }

# Web framework
actix-web = { workspace = true }
actix-multipart = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
futures = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Regex
regex = { workspace = true }
