[package]
name = "batata-consul-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Consul-compatible HTTP client SDK for Batata"

[dependencies]
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "sync", "macros"] }
tracing = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "time", "sync", "macros"] }
wiremock = { workspace = true }
