[package]
name = "batata-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core cluster and connection management for Batata"

[dependencies]
batata-common = { workspace = true }
batata-api = { workspace = true }
batata-consistency = { workspace = true }

# Concurrency
dashmap = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros", "net", "fs"] }
tokio-stream = { workspace = true }

# gRPC
tonic = { workspace = true, features = ["transport", "tls-native-roots"] }
prost-types = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
async-trait = { workspace = true }
futures = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Configuration
config = { workspace = true }

# Encoding
base64 = { workspace = true }
md5 = { workspace = true }

# Time
chrono = { workspace = true }

# Caching
moka = { workspace = true }

# JWT
jsonwebtoken = { workspace = true }

# System info (for handler metrics)
sysinfo = { workspace = true }
