[package]
name = "batata-foundation"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared infrastructure traits and types for batata — storage, consistency, cluster, event bus"

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
serde = { workspace = true, features = ["derive"] }
bytes.workspace = true
tracing.workspace = true
