[package]
name = "batata-maintainer-client"
version = "0.1.0"
edition = "2024"
description = "Admin/maintainer HTTP client for Batata/Nacos"
license = "Apache-2.0"
repository = "https://github.com/easynet-cn/batata"

[dependencies]
batata-client = { path = "../batata-client" }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1.49", features = ["rt", "time", "sync"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "2.0"
